# fastcode

./: .env.example  DOCKER.md  Dockerfile  README.md  justfile  main.py  nanobot_config.json  pyproject.toml  requirements.txt  web_app.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-config-and-dependencies/: 01-CONTEXT.md
.planning/phases/02-core-infrastructure/: 02-RESEARCH.md
.planning/phases/03-non-streaming-migration/: 03-CONTEXT.md
.planning/phases/04-streaming-migration-and-finalization/: 04-02-PLAN.md  04-VERIFICATION.md
.planning/phases/05-fix-answer-generator-wiring-and-cleanup/: 05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: config.yaml
fastcode/: __init__.py  answer_generator.py  cache.py  db.py  embedder.py  indexer.py  iterative_agent.py  llm_client.py  loader.py  main.py  query_processor.py  repo_overview.py  repo_selector.py  retriever.py  utils.py
nanobot/nanobot/providers/: registry.py
tests/: test_db.py  test_embedder_cache.py  test_embedder_smoke.py  test_indexer_sqlite.py  test_llm_client.py  test_retriever_bm25.py  test_vertexai_smoke.py
(+80 files in other folders)
