[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcode"
version = "2.0.0"
description = "Repository-level code understanding system with multi-repository support"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pyyaml",
    "click",
    "gitpython",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-c-sharp",
    "libcst",
    "faiss-cpu",
    "chromadb",
    "networkx",
    "tiktoken",
    "litellm[google]>=1.80.8",
    "fastapi",
    "uvicorn",
    "pydantic",
    "flask",
    "flask-cors",
    "python-multipart",
    "tqdm",
    "numpy",
    "pandas",
    "pathspec",
    "diskcache",
    "redis",
    "mcp[cli]",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]
